# whisper-tensor

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  LICENSE-MIT  README.md  build.rs  reference_test.py  rustfmt.toml
.cargo/: config.toml
.github/workflows/: rust.yml  webui-wasm.yml
.junie/: guidelines.md
crates/onnx-graph/: Cargo.toml  build.rs
crates/onnx-graph/src/: lib.rs  node.rs  operators.rs  pytorch.rs  tensor.rs  weights.rs
crates/onnx-import/: Cargo.toml
crates/onnx-import/examples/: translate_llama3.rs  translate_llama4.rs  translate_rwkv7.rs
crates/onnx-import/src/: lib.rs  llama3.rs  llama4.rs  rwkv7.rs
crates/onnx-rwkv/: Cargo.toml
crates/whisper-tensor-cli/: Cargo.toml
crates/whisper-tensor-cli/src/: main.rs
crates/whisper-tensor-import/: Cargo.toml  build.rs
crates/whisper-tensor-import/examples/: translate_llama3.rs  translate_llama4.rs  translate_qwen2.rs  translate_rwkv7.rs
crates/whisper-tensor-import/src/: deepseek_v2.rs  flux.rs  gemma.rs  gemma2.rs  gemma3.rs  lib.rs  llama3.rs  llama4.rs  phi3.rs  qwen2.rs  rwkv7.rs  sd15.rs  sd2.rs  sd3.rs  sd_clip.rs  sd_common.rs  sd_xl.rs  t5.rs  whisper.rs
crates/whisper-tensor-import/src/gguf/: llama3.rs  mod.rs  parser.rs  phi3.rs  qwen2.rs  qwen3.rs  tokenizer.rs
crates/whisper-tensor-import/src/loaders/: auto.rs  f5_tts.rs  flux.rs  flux_fp8.rs  gguf.rs  kokoro.rs  mod.rs  onnx.rs  piper.rs  rwkv7.rs  sd15.rs  sd2.rs  sd35.rs  sd_xl.rs  shared.rs  transformers.rs  whisper.rs
crates/whisper-tensor-import/src/loaders/sd35/: diffusers.rs  io_infer.rs  mod.rs  path.rs
crates/whisper-tensor-import/src/loaders/shared/: mod.rs  onnx_model.rs  rnn_supergraph.rs
crates/whisper-tensor-import/src/models/: mod.rs
crates/whisper-tensor-import/src/models/diffusion/: flux.rs  mod.rs  sd15.rs  sd2.rs  sd3.rs  sd_clip.rs  sd_common.rs  sd_xl.rs  t5.rs
crates/whisper-tensor-import/src/models/llm/: deepseek_v2.rs  gemma2.rs  llama3.rs  mod.rs  qwen2.rs  rwkv7.rs
crates/whisper-tensor-import/src/models/speech/: f5_tts.rs  kokoro.rs  mod.rs  piper.rs  whisper.rs  whisper_stt.rs
crates/whisper-tensor-import/src/onnx_graph/: mod.rs  node.rs  operators.rs  pytorch.rs  tensor.rs  weights.rs
crates/whisper-tensor-server/: Cargo.toml
crates/whisper-tensor-server/src/: applications.rs  handler.rs  lib.rs  main.rs  model_server.rs  scheduler.rs
crates/whisper-tensor-ui/: Cargo.toml  README.md
crates/whisper-tensor-ui/assets/: index.html  sw.js
crates/whisper-tensor-ui/src/: app.rs  audio_io.rs  lib.rs  llm_explorer.rs  main.rs  sd_explorer.rs  stt_explorer.rs  tts_explorer.rs  websockets.rs
crates/whisper-tensor-ui/src/graph_explorer/: graph_layout.rs  inspect_windows.rs  mod.rs
crates/whisper-tensor-ui/src/widgets/: mod.rs  progress_report.rs  tensor_view.rs  toggle.rs  tokenized_rich_text.rs
crates/whisper-tensor-webui/: Cargo.toml
crates/whisper-tensor-webui-server/: Cargo.toml
crates/whisper-tensor-webui-server/src/: main.rs
crates/whisper-tensor-webui/.cargo/: config.toml
crates/whisper-tensor-webui/assets/: 404.html  index.html  sw.js
crates/whisper-tensor-webui/src/: app.rs  graph_explorer.rs  graph_layout.rs  lib.rs  llm_explorer.rs  sd_explorer.rs  tensor_swatch.rs  websockets.rs
crates/whisper-tensor-webui/src/graph_explorer/: graph_layout.rs  inspect_windows.rs  mod.rs  tensor_swatch.rs
crates/whisper-tensor-webui/src/widgets/: mod.rs  tensor_view.rs  toggle.rs  tokenized_rich_text.rs
docs/: inspect_windows_plan.md  milli_op_graph.md  project_architecture.md  supergraph.md  symbolic_graph.md  training_support_design.md
examples/: compiled_test.rs  compiler_residual_block_bench.rs  compiler_test.rs  flux_test.rs  gpt2_test.rs  gpt2_train.rs  llama3_test.rs  matmul_perf_test.rs  mnist_train.rs  mnist_train_supergraph.rs  nano_graph_model_test.rs  ort_test.rs  rwkv_lora_train.rs  rwkv_test.rs  sd_1_5_test.rs  sd_2_test.rs  sd_reference_gen.py  sd_safetensors_test.rs  sd_text_encoder_test.rs  sd_unet_test.rs  sd_vae_decoder_test.rs  sd_vae_encoder_test.rs  sd_xl_interface_test.rs  sd_xl_test.rs  super_graph_test.rs  super_graph_test_2.rs  super_graph_test_3.rs  t5_test.rs  v8_model_test.rs  v9_model_test.rs  v9_scaling.rs  vulkan_test.rs
examples/matmul_test/: cranelift_0.rs  cranelift_1.rs  cranelift_2.rs  cranelift_3.rs  cranelift_4.rs  cranelift_5.rs  cranelift_6.rs  main.rs  reports.rs
scripts/: check-all.sh
src/: candle_backend.rs  dtype.rs  eval_backend.rs  graph.rs  interfaces.rs  language_model.rs  lib.rs  loader.rs  main.rs  meta.rs  metadata.rs  model.rs  model_cache.rs  native_numeric_tensor.rs  ndarray_backend.rs  numeric_scalar.rs  numeric_tensor.rs  numeric_tensor_typed.rs  onnx_reference_backend.rs  onnx_testing.rs  ort_backend.rs  packed_format.rs  packed_tensor.rs  paths.rs  phonemization.rs  pth.rs  sampler.rs  scalar_info.rs  symbolic_graph.rs  symbolic_scalar.rs  tensor_info.rs  tensor_rank.rs  tokenizer.rs  vulkan_context.rs
src/backends/: candle_backend.rs  eval_backend.rs  mod.rs  onnx_reference_backend.rs  ort_backend.rs
src/compiler/: README.md  codegen.rs  mod.rs
src/milli_graph/: mod.rs  observer.rs  ops.rs  ops_helpers.rs  validate_infer.rs
src/nano_graph/: eval.rs  lower.rs  mod.rs  ops.rs  optimize.rs  pattern.rs
src/ndarray_backend/: conversions.rs  mod.rs  numeric_tensor.rs  ops.rs
src/super_graph/: cache.rs  data.rs  interfaces.rs  links.rs  mod.rs  nodes.rs  observer.rs
src/symbolic_graph/: dimension.rs  helpers.rs  milli_ops.rs  milli_ops_helpers.rs  mod.rs  observer.rs  ops.rs  scalar_info.rs  symbolic_scalar.rs  tensor_info.rs  tensor_store.rs
src/vulkan_backend/: mod.rs  spirv_helpers.rs  tensor.rs
test_models/: RWKV-x070-World-0.1B-v2.8-20241210-ctx4096.pth
tests/: deepseek_v3_model_loading.rs  gemma2_model_loading.rs  gemma3_model_loading.rs  gemma_model_loading.rs  llama3_model_loading.rs  mistral_model_loading.rs  numeric_tensor_testing.rs  onnx_testing.rs  qwen2_model_loading.rs  rwkv_model_loading.rs  validate_infer.rs
tests/numeric_tensor_tests/: basic_arith.rs  basic_matmul.rs  (+4 more)
(+135 files in other folders)
