[package]
name = "whisper-tensor"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"
resolver = "2"
readme = "README.md"

[dependencies]
whisper-tensor-import = {workspace=true}
prost = "0.14.0"
vulkano = { version = "0.35.2", optional=true, default-features = false, features = ["serde"] }
vulkano-shaders = {version = "0.35.0", optional=true}
candle-core = {optional=true, workspace=true, default-features=false}
candle-onnx = {optional=true, workspace=true, default-features=false}
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "2.0.12"
anyhow = "1.0.91"
num-traits = "0.2.19"
half = { version="2.5.0", features = ["serde", "num-traits", "zerocopy"] }
tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt" ] }
tempfile = "3.23.0"
zerocopy = "0.8.26"
pyo3 = {optional=true, version = "0.27.2", features = ["auto-initialize"]}
tokenizers = {optional=true, version="0.22.1", default-features = false, features = ["unstable_wasm"]}
rspirv = "0.12.0"
tch = {optional=true, version="0.22.0"}
wyrand = "0.3.2"
rand = "0.9.2"

ndarray = { version = "0.16.1", features = ["serde", "rayon", "matrixmultiply-threading"] }
rwkv-tokenizer = {workspace=true, optional=true, features = ["serde"] }
env_logger = "0.11.8"
log = "0.4.27"
serde_json = "1.0.140"
typenum = { version="1.18.0", features=["const-generics"] }
strum = "0.27"
strum_macros = "0.27"
paste = "1.0.15"
image = "0.25"

[features]
default = ["tokenizers", "rwkv-tokenizer", "http"]
onnx-reference = ["pyo3"]
candle = ["candle-onnx", "candle-core"]
tokenizers = ["dep:tokenizers"]
http = ["tokenizers?/http"]
rwkv-tokenizer = ["dep:rwkv-tokenizer"]
vulkan = ["dep:vulkano", "dep:vulkano-shaders"]
tch = ["dep:tch"]

[build-dependencies]
prost-build = "0.13.3"

[workspace]
members = [ "crates/whisper-tensor-import", "crates/whisper-tensor-webui", "crates/whisper-tensor-server"]

[workspace.dependencies]
rwkv-tokenizer = { path = "libs/rwkv-tokenizer/rwkv-tokenizer" }
whisper-tensor = {path = "", default-features=false}
whisper-tensor-webui = {path = "crates/whisper-tensor-webui"}
whisper-tensor-import = {path = "crates/whisper-tensor-import"}
whisper-tensor-server = {path = "crates/whisper-tensor-server", default-features=false}
candle-core = {version="0.9.0", default-features=false}
candle-onnx = {version="0.9.0", default-features=false}

[[example]]
name = "vulkan_test"
path = "examples/vulkan_test.rs"
required-features = ["vulkan"]

[[example]]
name = "super_graph_test_3"
path = "examples/super_graph_test_3.rs"
required-features = ["vulkan"]

[[example]]
name = "matmul_perf_test"
path = "examples/matmul_perf_test.rs"
required-features = ["vulkan"]
