[package]
name = "onnx-graph"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = {workspace=true, default-features=false}
safetensors = "0.5.3"
prost = "0.13.5"
memmap2 = "0.9.5"
half = "2.5.0"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[build-dependencies]
prost-build = "0.13.3"