[package]
name = "whisper-tensor-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "wt"
path = "src/main.rs"

[dependencies]
whisper-tensor = { workspace = true, features = ["tokenizers", "rwkv-tokenizer", "http", "blas", "safetensors", "espeak"] }
whisper-tensor-import = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rand = "0.9.2"
image = "0.25"
half = "2.5.0"
hound = "3.5.1"
serde_json = "1.0.149"
