[package]
name = "whisper-tensor-import"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = {workspace=true, default-features=false}
safetensors = "0.6.2"
memmap2 = "0.9.5"
prost = "0.14.1"
half = "2.5.0"
serde_json = "1.0.140"
thiserror = "2.0.12"
anyhow = "1.0.89"
strum = "0.27"
strum_macros = "0.27"
serde = { version = "1.0.219", features = ["derive"] }

[build-dependencies]
prost-build = "0.14.1"