[package]
name = "whisper-tensor-import"
version = "0.1.0"
edition = "2024"

[dependencies]
whisper-tensor = {workspace=true, default-features=false}
safetensors = "0.7.0"
memmap2 = "0.9.10"
prost = "0.14.3"
half = "2.7.1"
serde_json = "1.0.140"
thiserror = "2.0.12"
anyhow = "1.0.102"
rand = "0.10.0"
strum = "0.28"
strum_macros = "0.28"
serde = { version = "1.0.219", features = ["derive"] }
float8 = { version = "0.7.0", features = ["serde", "num-traits"] }

[build-dependencies]
prost-build = "0.14.3"
