[package]
name = "whisper-tensor-server"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
tracing-subscriber = "0.3.19"

tracing = "0.1"
log = "0.4.27"
ciborium = { version="0.2.2"}
whisper-tensor-import = {workspace=true, optional=true}
whisper-tensor = {workspace=true}
anyhow = "1.0.100"
serde = { version = "1.0.219", features = ["derive"] }
strum_macros = "0.27.1"
strum = "0.27.0"
num-traits = "0.2.19"
typenum = { version="1.18.0", features=["const-generics"] }
crossbeam = "0.8.4"
tempfile = "3.24.0"
rand = "0.9.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "time"] }
axum = { version = "0.8.8", features = ["http2", "tokio", "ws"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
hf-hub = {version = "0.4.3", features = ["tokio"]}
tokenizers = {version="0.22.2", default-features = false, features = ["unstable_wasm", "http"]}

[features]
default = ["whisper-tensor/default", "import"]
import = ["dep:whisper-tensor-import"]
vulkan = ["whisper-tensor/vulkan"]
candle = ["whisper-tensor/candle"]
