[package]
name = "whisper-tensor-ui"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "whisper-tensor-ui"
path = "src/main.rs"

[features]
default = []
native = ["import", "cranelift", "http", "safetensors"]
import = ["whisper-tensor-server/import"]
vulkan = ["whisper-tensor-server/vulkan"]
cranelift = ["whisper-tensor-server/cranelift"]
http = ["whisper-tensor/http", "whisper-tensor-server/http"]
safetensors = ["whisper-tensor/safetensors", "whisper-tensor-server/safetensors"]
espeak = ["whisper-tensor-server/espeak"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-subscriber = "0.3.23"
wasm-bindgen-futures = "0.4.64"
web-sys = { version = "0.3.91", features = ['Document',
    'Element',
    'HtmlElement',
    'HtmlAnchorElement',
    'Node',
    'Window',
    'WebSocket',
    'MessageEvent',
    'ErrorEvent',
    'CloseEvent',
    'ProgressEvent',
    'FileReader',
    'Blob',
    'BlobPropertyBag',
    'Url',
    'CssStyleDeclaration',
    'HtmlCollection',
] }
js-sys = "0.3.91"
wasm-bindgen = "0.2.114"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
web-time = "1.1.0"
futures = {version = "0.3.32"}
rfd = "0.17.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "sync"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tracing = "0.1"
rfd = "0.17.2"
rodio = "0.22.2"
cpal = "0.17.3"

[dependencies]
egui = { version = "0.33.3" }
egui_extras = { version = "0.33.3" }
eframe = {version = "0.33.3", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
    "x11",
    "wayland",
]}
log = "0.4.29"
ciborium = { version="0.2.2"}
tokio = {version = "1.50.0", default-features = false, features = ["sync"]}
rwkv-tokenizer = { workspace = true }
whisper-tensor = {workspace=true, default-features = false, features=["tokenizers", "rwkv-tokenizer"]}
whisper-tensor-server = {workspace=true, default-features = false}
strum = "0.28.0"
serde = { version = "1.0.219", features = ["derive"] }
rand = "0.10.0"
tokenizers = {version="0.22.2", default-features = false, features = ["unstable_wasm"]}
thiserror = "2.0.12"
hound = "3.5.1"
