[package]
name = "whisper-tensor-webui-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-subscriber = "0.3.19"
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread"] }
axum = { version = "0.8.4", features = ["http2", "tokio", "ws"] }
tower-http = { version = "0.6.4", features = ["fs", "trace"] }
tracing = "0.1"
log = "0.4.27"
rmp-serde = "1.3.0"
onnx-graph = {workspace=true}
onnx-import = {workspace=true}
whisper-tensor = {workspace=true}
whisper-tensor-webui = {workspace = true}
anyhow = "1.0.98"
